tests/security/taintUnserialize/output.txt
ERROR: TaintedData - input.hack:1:19 - Detected tainted data passed to unserialize